FS-1025 FP Step 5: alignment issue with file name and icons

--- a/src/css/i2e-common-ui.css
+++ b/src/css/i2e-common-ui.css
@@ -25650,6 +25650,8 @@ td .grant-icons {
 /* line 462, ../Github/sm_i2e_common_ui/src/scss/custom/_fs-custom.scss */
 #submission-package .card .card-header .doc-buttons {
   margin-left: auto;
+  min-width: 60px;
+  text-align: right;
 }
 
 /* line 470, ../Github/sm_i2e_common_ui/src/scss/custom/_fs-custom.scss */
